# freedane

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  run.it.txt
data/: sprint2_acceptance_ids.txt  sprint6_investigation_report.html  sprint6_review_queue.csv  sprint7_day1_baseline_feedback.sql  sprint7_day1_baseline_report.html
docs/: daily_analyst_runbook.md  todo_immediately.md
docs/planning/: devplan.md
docs/templates/: README.md  alert_route_config_v1.template.json  appeal_events_template.csv  permit_events_template.csv
migrations/: env.py
migrations/versions/: 20260301_0001_baseline.py  20260301_0002_fetch_parse_queue_index.py  (+11 more)
scripts/: fixture_scan.py  run_promotion_gate_ci.sh  run_scheduled_refresh.sh  run_startup_workflow.sh
tests/: conftest.py  test_alert_transport.py  test_appeals.py  test_benchmark_pack.py  test_build_features.py  test_case_review.py  test_cli.py  test_environment_profiles.py  test_investigation_report.py  test_investigation_workflow.py  test_load_monitoring.py  test_migrations.py  test_normalization.py  test_observability.py  test_parcel_dossier.py  test_parcel_dossier_queries.py  test_parcel_year_facts.py  test_parse.py  test_parser_drift.py  test_permits.py  test_profiling.py  test_promotion.py  test_promotion_gate.py  test_quality.py  test_rebuild_parcel_characteristics.py  test_rebuild_parcel_lineage_links.py  test_refresh_automation.py  test_retr.py  test_review_feedback.py  test_review_queue.py  test_sales_ratio_study.py  test_scheduler_integration.py  test_score_fraud.py  test_spatial.py
(+135 files in other folders)
