[project]
name = "accessdane-audit"
version = "0.1.0"
description = "AccessDane McFarland audit pipeline"
requires-python = ">=3.10"
dependencies = [
  "alembic>=1.13",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "python-dotenv>=1.0",
  "psycopg>=3.1",
]

[project.scripts]
accessdane = "accessdane_audit.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "mypy>=1.10",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks slower-running tests",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
exclude = [
  "src/accessdane_audit\\.egg-info/",
]
